@@ -2,326 +2,326 @@
 
 - ## 初始Java
 
-   - #### 什么是Java？
+  - #### 什么是Java？
 
-      > - Java最早是由SUN公司（目前已被Oracle收购）的**詹姆斯·高斯林**在上个世纪90年代初开发的一种编程语言，最初被命名为Oak，目标是针对小型家电设备的嵌入式应用，结果市场没啥反响。谁料到互联网的崛起，让Oak重新焕发了生机，于是SUN公司改造了Oak，在1995年以Java的名称正式发布，原因是Oak已经被人注册了，因此SUN注册了Java这个商标。随着互联网的高速发展，Java逐渐成为最重要的网络编程语言。
-      >
-      > - 随着Java的发展，SUN给Java又分出了三个不同版本：
-      >
-      >   - Java SE：Standard Edition
-      >   - Java EE：Enterprise Edition
-      >   - Java ME：Micro Edition
-      >
-      > - 三者的关系：
-      >
-      >   ![image-20240928194616639](./assets/image-20240928194616639.png)
-      >
-      > - 简单来说，Java SE就是标准版，包含标准的JVM和标准库，而Java EE是企业版，它只是在Java SE的基础上加上了大量的API和库，以便方便开发Web应用、数据库、消息服务等，Java EE的应用使用的JVM和Java SE完全相同。
-      >
-      > - 而Java ME的JVM和Java SE的JVM不同，它是一个针对嵌入式设备的“瘦身版”，Java SE的标准库无法在Java ME上使用，Java ME的虚拟机也是“瘦身版”。
-      >
-      >   > **虚拟机（JVM）：**
-      >   >
-      >   > - **JVM（JAVA VIRTUAL MACHINE）是一种规范**，是Java最核心技术，也是跨平台的基础。它可以使用软件来实现，例如：IBM, SUN, BEA等；也可以使用硬件来实现，例如：SUM/Intel公司研发的Java芯片。
-      >   > - JVM就是一个由软件或硬件模拟的、用于执行bytecodes字节码的计算机。它同样也定义了指令集、寄存器集、结构栈、垃圾收集堆、内存区域。
-      >
-      > - 毫无疑问，Java SE是整个Java平台的核心，而Java EE是进一步学习Web应用所必须的。我们熟悉的Spring等框架都是Java EE开源生态系统的一部分。不幸的是，Java ME从来没有真正流行起来，反而是Android开发成为了移动平台的标准之一，因此，没有特殊需求，不建议学习Java ME。
-      >
-      > - 推荐的Java学习路线图如下：
-      >
-      >   1. 首先要学习Java SE，掌握Java语言本身、Java核心开发技术以及Java标准库的使用。
-      >   2. 如果继续学习Java EE，那么Spring框架、数据库开发、分布式架构就是需要学习的。
-      >   3. 如果要学习大数据开发，那么Hadoop、Spark、Flink这些大数据平台就是需要学习的，他们都基于Java或Scala开发。
-      >   4. 如果想要学习移动开发，那么就深入Android平台，掌握Android App开发。
-      >
-      >   无论怎么选择，Java SE的核心技术是基础，这个教程的目的就是让你完全精通Java SE并掌握Java EE！
+     > - Java最早是由SUN公司（目前已被Oracle收购）的**詹姆斯·高斯林**在上个世纪90年代初开发的一种编程语言，最初被命名为Oak，目标是针对小型家电设备的嵌入式应用，结果市场没啥反响。谁料到互联网的崛起，让Oak重新焕发了生机，于是SUN公司改造了Oak，在1995年以Java的名称正式发布，原因是Oak已经被人注册了，因此SUN注册了Java这个商标。随着互联网的高速发展，Java逐渐成为最重要的网络编程语言。
+     >
+     > - 随着Java的发展，SUN给Java又分出了三个不同版本：
+     >
+     >   - Java SE：Standard Edition
+     >   - Java EE：Enterprise Edition
+     >   - Java ME：Micro Edition
+     >
+     > - 三者的关系：
+     >
+     >   ![image-20240928194616639](./assets/image-20240928194616639.png)
+     >
+     > - 简单来说，Java SE就是标准版，包含标准的JVM和标准库，而Java EE是企业版，它只是在Java SE的基础上加上了大量的API和库，以便方便开发Web应用、数据库、消息服务等，Java EE的应用使用的JVM和Java SE完全相同。
+     >
+     > - 而Java ME的JVM和Java SE的JVM不同，它是一个针对嵌入式设备的“瘦身版”，Java SE的标准库无法在Java ME上使用，Java ME的虚拟机也是“瘦身版”。
+     >
+     >   > **虚拟机（JVM）：**
+     >   >
+     >   > - **JVM（JAVA VIRTUAL MACHINE）是一种规范**，是Java最核心技术，也是跨平台的基础。它可以使用软件来实现，例如：IBM, SUN, BEA等；也可以使用硬件来实现，例如：SUM/Intel公司研发的Java芯片。
+     >   > - JVM就是一个由软件或硬件模拟的、用于执行bytecodes字节码的计算机。它同样也定义了指令集、寄存器集、结构栈、垃圾收集堆、内存区域。
+     >
+     > - 毫无疑问，Java SE是整个Java平台的核心，而Java EE是进一步学习Web应用所必须的。我们熟悉的Spring等框架都是Java EE开源生态系统的一部分。不幸的是，Java ME从来没有真正流行起来，反而是Android开发成为了移动平台的标准之一，因此，没有特殊需求，不建议学习Java ME。
+     >
+     > - 推荐的Java学习路线图如下：
+     >
+     >   1. 首先要学习Java SE，掌握Java语言本身、Java核心开发技术以及Java标准库的使用。
+     >   2. 如果继续学习Java EE，那么Spring框架、数据库开发、分布式架构就是需要学习的。
+     >   3. 如果要学习大数据开发，那么Hadoop、Spark、Flink这些大数据平台就是需要学习的，他们都基于Java或Scala开发。
+     >   4. 如果想要学习移动开发，那么就深入Android平台，掌握Android App开发。
+     >
+     >   无论怎么选择，Java SE的核心技术是基础，这个教程的目的就是让你完全精通Java SE并掌握Java EE！
 
-   - #### Java的发展史
+  - #### Java的发展史
 
-      - 1991年，Sun公司的Green项目（Oak语言）
-      - 1995年，推出JAVA测试版
-      - 1996年，JDK1.0
-      - 1998年，JDK1.2，大大改进了早期版本的缺陷，是一个革命性的版本，更名为Java2
-      - 1999年，Java分为J2SE、J2EE和J2ME三个版本，其中J2EE的出现标志着JSP/Servlet诞生
-      - 2006年，JDK1.6，并且Java各种版本被更名，取消其中的数字"2"：J2EE更名为Java EE, J2SE更名为Java SE，J2ME更名为Java ME
-      - 2011年，JDK1.7，也称之为JAVA7版本
-      - 2014年，JDK1.8，也称之为JAVA8版本，该版本是当前最广泛使用的版本（LTS）。
-      - 2017年，JDK1.9，也称之为JAVA9版本
-      - 从2018年开始，每年3月和9月都会发布新JDK版本，并且JDK的命名从10开始递增。
-      - 2018年3月，JDK10，也称之为JAVA10版本
-      - 2018年9月，JDK11，也称之为JAVA11版本（LTS）
-      - ......
-      - 2021年3月，JDK16，也称之为JAVA16版本
-      - 2021年9月，JDK17，也称之为JAVA17版本（LTS）
-      - 2022年3月，JDK18，也称之为JAVA18版本
-      - ......
+     - 1991年，Sun公司的Green项目（Oak语言）
+     - 1995年，推出JAVA测试版
+     - 1996年，JDK1.0
+     - 1998年，JDK1.2，大大改进了早期版本的缺陷，是一个革命性的版本，更名为Java2
+     - 1999年，Java分为J2SE、J2EE和J2ME三个版本，其中J2EE的出现标志着JSP/Servlet诞生
+     - 2006年，JDK1.6，并且Java各种版本被更名，取消其中的数字"2"：J2EE更名为Java EE, J2SE更名为Java SE，J2ME更名为Java ME
+     - 2011年，JDK1.7，也称之为JAVA7版本
+     - 2014年，JDK1.8，也称之为JAVA8版本，该版本是当前最广泛使用的版本（LTS）。
+     - 2017年，JDK1.9，也称之为JAVA9版本
+     - 从2018年开始，每年3月和9月都会发布新JDK版本，并且JDK的命名从10开始递增。
+     - 2018年3月，JDK10，也称之为JAVA10版本
+     - 2018年9月，JDK11，也称之为JAVA11版本（LTS）
+     - ......
+     - 2021年3月，JDK16，也称之为JAVA16版本
+     - 2021年9月，JDK17，也称之为JAVA17版本（LTS）
+     - 2022年3月，JDK18，也称之为JAVA18版本
+     - ......
 
-      从1996年发布1.0版本开始，到目前为止，最新的Java版本是Java 23：（本教程使用Java 21长期支持版）
+     从1996年发布1.0版本开始，到目前为止，最新的Java版本是Java 23：（本教程使用Java 21长期支持版）
 
-   - #### Java的特点
+  - #### Java的特点
 
-      > Java介于编译型语言和解释型语言之间。编译型语言如C、C++，代码是直接编译成机器码执行，但是不同的平台（x86、ARM等）CPU的指令集不同，因此，需要编译出每一种平台的对应机器码。解释型语言如Python、Ruby没有这个问题，可以由解释器直接加载源码然后运行，代价是运行效率太低。而Java是将代码编译成一种“字节码”，它类似于抽象的CPU指令，然后，针对不同平台编写虚拟机，不同平台的虚拟机负责加载字节码并执行，这样就实现了“一次编写，到处运行”的效果。当然，这是针对Java开发者而言。对于虚拟机，需要为每个平台分别开发。为了保证不同平台、不同公司开发的虚拟机都能正确执行Java字节码，SUN公司制定了一系列的Java虚拟机规范。从实践的角度看，JVM的兼容性做得非常好，低版本的Java字节码完全可以正常运行在高版本的JVM上。
+     > Java介于编译型语言和解释型语言之间。编译型语言如C、C++，代码是直接编译成机器码执行，但是不同的平台（x86、ARM等）CPU的指令集不同，因此，需要编译出每一种平台的对应机器码。解释型语言如Python、Ruby没有这个问题，可以由解释器直接加载源码然后运行，代价是运行效率太低。而Java是将代码编译成一种“字节码”，它类似于抽象的CPU指令，然后，针对不同平台编写虚拟机，不同平台的虚拟机负责加载字节码并执行，这样就实现了“一次编写，到处运行”的效果。当然，这是针对Java开发者而言。对于虚拟机，需要为每个平台分别开发。为了保证不同平台、不同公司开发的虚拟机都能正确执行Java字节码，SUN公司制定了一系列的Java虚拟机规范。从实践的角度看，JVM的兼容性做得非常好，低版本的Java字节码完全可以正常运行在高版本的JVM上。
 
-   - #### JDK和JRE
+  - #### JDK和JRE
 
-      - ##### JDK：Java Development Kit（Java开发工具包）
+     - ##### JDK：Java Development Kit（Java开发工具包）
 
-      - ##### JRE：Java Runtime Environment（Java的运行环境）
+     - ##### JRE：Java Runtime Environment（Java的运行环境）
 
-      > 简单来说，JRE就是运行Java程序所需的环境，包括运行Java字节码的虚拟机及需要的核心库。而JDK则包含了编译Java代码所需的编译器、调试器等开发工具。
+     > 简单来说，JRE就是运行Java程序所需的环境，包括运行Java字节码的虚拟机及需要的核心库。而JDK则包含了编译Java代码所需的编译器、调试器等开发工具。
 
-      ###### **注意**：从JDK9开始，jdk的目录中就没有单独的jre目录了，JDK中已经内嵌了JRE，所以没必要再额外包含JRE了，需要单独的JRE则单独下载即可。
+     ###### **注意**：从JDK9开始，jdk的目录中就没有单独的jre目录了，JDK中已经内嵌了JRE，所以没必要再额外包含JRE了，需要单独的JRE则单独下载即可。
 
-      > **扩展知识：JSR和JCP又是啥？**
-      >
-      > - JSR规范：Java Specification Request（Java规范请求）
-      > - JCP组织：Java Community Process（Java社区流程）
-      >
-      > 为了保证Java语言的规范性，SUN公司搞了一个JSR规范，凡是想给Java平台加一个功能，比如说访问数据库的功能，大家要先创建一个JSR规范，定义好接口，这样，各个数据库厂商都按照规范写出Java驱动程序，开发者就不用担心自己写的数据库代码在MySQL上能跑，却不能跑在PostgreSQL上。
-      >
-      > 所以JSR是一系列的规范，从JVM的内存模型到Web程序接口，全部都标准化了。而负责审核JSR的组织就是JCP组织。
-      >
-      > 一个JSR规范发布时，为了让大家有个参考，还要同时发布一个“参考实现”，以及一个“兼容性测试套件”：
-      >
-      > - RI：Reference Implementation
-      > - TCK：Technology Compatibility Kit
-      >
-      > 比如有人提议要搞一个基于Java开发的消息服务器，这个提议很好啊，但是光有提议还不行，得贴出真正能跑的代码，这就是RI。如果有其他人也想开发这样一个消息服务器，如何保证这些消息服务器对开发者来说接口、功能都是相同的？所以还得提供TCK。
-      >
-      > 通常来说，RI只是一个“能跑”的正确的代码，它不追求速度，所以，如果真正要选择一个Java的消息服务器，一般是没人用RI的，大家都会选择一个有竞争力的商用或开源产品。
+     > **扩展知识：JSR和JCP又是啥？**
+     >
+     > - JSR规范：Java Specification Request（Java规范请求）
+     > - JCP组织：Java Community Process（Java社区流程）
+     >
+     > 为了保证Java语言的规范性，SUN公司搞了一个JSR规范，凡是想给Java平台加一个功能，比如说访问数据库的功能，大家要先创建一个JSR规范，定义好接口，这样，各个数据库厂商都按照规范写出Java驱动程序，开发者就不用担心自己写的数据库代码在MySQL上能跑，却不能跑在PostgreSQL上。
+     >
+     > 所以JSR是一系列的规范，从JVM的内存模型到Web程序接口，全部都标准化了。而负责审核JSR的组织就是JCP组织。
+     >
+     > 一个JSR规范发布时，为了让大家有个参考，还要同时发布一个“参考实现”，以及一个“兼容性测试套件”：
+     >
+     > - RI：Reference Implementation
+     > - TCK：Technology Compatibility Kit
+     >
+     > 比如有人提议要搞一个基于Java开发的消息服务器，这个提议很好啊，但是光有提议还不行，得贴出真正能跑的代码，这就是RI。如果有其他人也想开发这样一个消息服务器，如何保证这些消息服务器对开发者来说接口、功能都是相同的？所以还得提供TCK。
+     >
+     > 通常来说，RI只是一个“能跑”的正确的代码，它不追求速度，所以，如果真正要选择一个Java的消息服务器，一般是没人用RI的，大家都会选择一个有竞争力的商用或开源产品。
 
-   - #### Java开发环境搭建
+  - #### Java开发环境搭建
 
-      > 1. 到Oracle官网下载对应版本的JDK（Oracle JDK），双击安装即可。注意：安装路径不要有中文、空格或特殊字符。（LTS后缀的JDK是长期支持版）
-      >
-      > 2. 配置环境变量（Windows）：（安装高版本JDK会自动配一个javapath环境变量，可以删掉）
-      >
-      >    1. 在系统环境变量中添加`JAVA_HOME`环境变量，值为JDK的安装目录（没有`bin\`）。
-      >
-      >       > 由于后面用到的很多工具，如Maven、Tomcat..等，都是Java写的，都需要依赖JDK来运行。并且它们运行默认都会去找`JAVA_HOME`所指定的JDK，因此这里这样配置比较通用。
-      >
-      >    2. 在系统环境变量`Path`中追加：`%JAVA_HOME%\bin`
-      >
-      >    3. 打开DOS命令窗口，输入`java`并回车，如果出现Java21的版本号说明配置成功。
-      >
-      >
-      > 之所以要配置环境变量，是因为我们开发时要在不同位置执行`java/javac`命令，而DOS中执行的所有命令都必须在Path环境变量中配置，这样系统才知道该命令所对应的可执行程序在哪里。
+     > 1. 到Oracle官网下载对应版本的JDK（Oracle JDK），双击安装即可。注意：安装路径不要有中文、空格或特殊字符。（LTS后缀的JDK是长期支持版）
+     >
+     > 2. 配置环境变量（Windows）：（安装高版本JDK会自动配一个javapath环境变量，可以删掉）
+     >
+     >    1. 在系统环境变量中添加`JAVA_HOME`环境变量，值为JDK的安装目录（没有`bin\`）。
+     >
+     >       > 由于后面用到的很多工具，如Maven、Tomcat..等，都是Java写的，都需要依赖JDK来运行。并且它们运行默认都会去找`JAVA_HOME`所指定的JDK，因此这里这样配置比较通用。
+     >
+     >    2. 在系统环境变量`Path`中追加：`%JAVA_HOME%\bin`
+     >
+     >    3. 打开DOS命令窗口，输入`java`并回车，如果出现Java21的版本号说明配置成功。
+     >
+     >
+     > 之所以要配置环境变量，是因为我们开发时要在不同位置执行`java/javac`命令，而DOS中执行的所有命令都必须在Path环境变量中配置，这样系统才知道该命令所对应的可执行程序在哪里。
 
-      ###### 细心的童鞋还可以在`JAVA_HOME`的`bin`目录下找到很多可执行文件：
+     ###### 细心的童鞋还可以在`JAVA_HOME`的`bin`目录下找到很多可执行文件：
 
-      - `java`：这个可执行程序其实就是JVM，运行Java程序，就是启动JVM，然后让JVM执行指定的编译后的代码。
-      - `javac`：这是Java的编译器，它用于把Java源码文件（以`.java`后缀结尾）编译为Java字节码文件（以`.class`后缀结尾）。
-      - `jar`：用于把一组`.class`文件打包成一个`.jar`文件，便于发布。
-      - `javadoc`：用于从Java源码中自动提取注释并生成文档。
-      - `jdb`：Java调试器，用于开发阶段的运行调试。
+     - `java`：这个可执行程序其实就是JVM，运行Java程序，就是启动JVM，然后让JVM执行指定的编译后的代码。
+     - `javac`：这是Java的编译器，它用于把Java源码文件（以`.java`后缀结尾）编译为Java字节码文件（以`.class`后缀结尾）。
+     - `jar`：用于把一组`.class`文件打包成一个`.jar`文件，便于发布。
+     - `javadoc`：用于从Java源码中自动提取注释并生成文档。
+     - `jdb`：Java调试器，用于开发阶段的运行调试。
 
-   - #### 常用的DOS命令
+  - #### 常用的DOS命令
 
-      - ##### DOS简介：
+     - ##### DOS简介：
 
-        > - DOS是英文“Disk Operating System”的缩写，其中文含意是“磁盘操作系统”。简单来说，DOS就是一个单用户、单任务的操作系统。
-        > - 从1981年直到1995年的15年间，磁盘操作系统在IBM PC兼容机市场中占有举足轻重的地位。而且，若是把部分以DOS为基础的Microsoft Windows版本，如Windows 95、Windows 98和Windows Me等都算进去的话，那么其商业寿命至少可以算到2000年。微软的所有后续版本中，磁盘操作系统仍然被保留着。
-        > - 家族包括MS-DOS、PC-DOS、DR-DOS、PTS-DOS、ROM-DOS、JM-OS等，其中以MS-DOS最为著名。虽然这些系统常被简称为“DOS”，但几乎没有系统单纯以“DOS”命名（只有一个毫无关连的1960年代IBM大型主机操作系统以此命名）。此外，有几个和DOS无关、在非x86的微计算机系统上运行的磁盘操作系统在名称中也有“DOS”字眼，而且在专门讨论该机器的场合中也会简称为“DOS”（例如：AmigaDOS、AMSDOS、ANDOS、AppleDOS、Atari DOS、Commodore DOS、CSI-DOS、ProDOS、TRS-DOS等），但这些系统和DOS可执行文件以及MS-DOS API并不兼容。
+       > - DOS是英文“Disk Operating System”的缩写，其中文含意是“磁盘操作系统”。简单来说，DOS就是一个单用户、单任务的操作系统。
+       > - 从1981年直到1995年的15年间，磁盘操作系统在IBM PC兼容机市场中占有举足轻重的地位。而且，若是把部分以DOS为基础的Microsoft Windows版本，如Windows 95、Windows 98和Windows Me等都算进去的话，那么其商业寿命至少可以算到2000年。微软的所有后续版本中，磁盘操作系统仍然被保留着。
+       > - 家族包括MS-DOS、PC-DOS、DR-DOS、PTS-DOS、ROM-DOS、JM-OS等，其中以MS-DOS最为著名。虽然这些系统常被简称为“DOS”，但几乎没有系统单纯以“DOS”命名（只有一个毫无关连的1960年代IBM大型主机操作系统以此命名）。此外，有几个和DOS无关、在非x86的微计算机系统上运行的磁盘操作系统在名称中也有“DOS”字眼，而且在专门讨论该机器的场合中也会简称为“DOS”（例如：AmigaDOS、AMSDOS、ANDOS、AppleDOS、Atari DOS、Commodore DOS、CSI-DOS、ProDOS、TRS-DOS等），但这些系统和DOS可执行文件以及MS-DOS API并不兼容。
 
-      - ##### 常用的DOS命令：
+     - ##### 常用的DOS命令：
 
-        > cd、md、rd、copy、del、ipconfig、ping、exit、cls、help...
+       > cd、md、rd、copy、del、ipconfig、ping、exit、cls、help...
 
-        ###### 注意：DOS命令不区分大小写，但是文件或文件夹需要区分大小写。
+       ###### 注意：DOS命令不区分大小写，但是文件或文件夹需要区分大小写。
 
-   - #### 第一个Java程序：HelloWorld
+  - #### 第一个Java程序：HelloWorld
 
-      1. 新建一个文件`Hello.java`，用记事本打开并输入以下代码：
+     1. 新建一个文件`Hello.java`，用记事本打开并输入以下代码：
 
-         ```java
-         public class Hello {
-             public static void main(String[] args) {
-             	System.out.println("Hello, World!"); // 该语句可以调用操作系统标准输出流打印出Hello World
-             }
-         }
-         ```
+        ```java
+        public class Hello {
+            public static void main(String[] args) {
+            	System.out.println("Hello, World!"); // 该语句可以调用操作系统标准输出流打印出Hello World
+            }
+        }
+        ```
 
-         > 简单做下说明：
-         >
-         > - clsss关键字声明的是一个Java类，类名通常遵循**大驼峰命名规范**。
-         >
-         > - public是类的**访问权限修饰符**，类的访问权限可以是`public`或`不加任何修饰符`。
-         >
-         > - Java规定：某个类定义的`public static void main(String[] args)`是Java程序**唯一的**固定**入口方法/主方法**。JVM总是从`main`主方法开始执行一个Java程序。
-         >
-         >   > 方法是可执行的代码块，一个方法除了方法名main，还有用`()`括起来的方法参数，这里的main方法有一个参数，参数类型是`String[]`，参数名（变量）是`args`，`public、static`用来修饰方法，表示它是一个公开的静态方法，`void`是方法的返回类型，而花括号`{}`中间的就是方法体，里面是具体要执行的方法代码。
-         >
-         > - 最后，当我们把Java代码保存为文件时，文件后缀必须是`.java`。而且文件名也要注意，在Java中，**`public`修饰的类名必须和文件名保持一致**。
-         >
-         > - 一个Java文件中允许写多个类，但是其中被public修饰的类的类名必须和该文件名保持一致。通常一个类对应一个`.java`文件。
-         >
-         > - 注意：Java源码的缩进不是必须的，但是用缩进后，格式好看，很容易看出代码块的开始和结束。后端代码的缩进一般是4个空格，前端代码的缩进一般是2个空格。
-         >
+        > 简单做下说明：
+        >
+        > - clsss关键字声明的是一个Java类，类名通常遵循**大驼峰命名规范**。
+        >
+        > - public是类的**访问权限修饰符**，类的访问权限可以是`public`或`不加任何修饰符`。
+        >
+        > - Java规定：某个类定义的`public static void main(String[] args)`是Java程序**唯一的**固定**入口方法/主方法**。JVM总是从`main`主方法开始执行一个Java程序。
+        >
+        >   > 方法是可执行的代码块，一个方法除了方法名main，还有用`()`括起来的方法参数，这里的main方法有一个参数，参数类型是`String[]`，参数名（变量）是`args`，`public、static`用来修饰方法，表示它是一个公开的静态方法，`void`是方法的返回类型，而花括号`{}`中间的就是方法体，里面是具体要执行的方法代码。
+        >
+        > - 最后，当我们把Java代码保存为文件时，文件后缀必须是`.java`。而且文件名也要注意，在Java中，**`public`修饰的类名必须和文件名保持一致**。
+        >
+        > - 一个Java文件中允许写多个类，但是其中被public修饰的类的类名必须和该文件名保持一致。通常一个类对应一个`.java`文件。
+        >
+        > - 注意：Java源码的缩进不是必须的，但是用缩进后，格式好看，很容易看出代码块的开始和结束。后端代码的缩进一般是4个空格，前端代码的缩进一般是2个空格。
+        >
 
-      2. 将Java程序编译为字节码（`.class`）：`javac Hello.java`
+     2. 将Java程序编译为字节码（`.class`）：`javac Hello.java`
 
-      3. 启动JVM，加载并运行编译好的字节码文件（将编译好的字节码放到JVM上运行）：`java Hello`
+     3. 启动JVM，加载并运行编译好的字节码文件（将编译好的字节码放到JVM上运行）：`java Hello`
 
-         > 注意：给JVM虚拟机传递的参数`Hello`是我们定义的类名，JVM启动后会自动查找对应的`类名.class`文件装载并执行。
+        > 注意：给JVM虚拟机传递的参数`Hello`是我们定义的类名，JVM启动后会自动查找对应的`类名.class`文件装载并执行。
 
-      ###### 扩展：
+     ###### 扩展：
 
-      - 有一些童鞋可能知道，直接运行`java Hello.java`也是可以的：`java Hello.java`。这是Java 11（JDK11）新增的一个功能，它可以直接运行一个单文件源码！
-      - 需要注意的是，在实际项目中，单个不依赖第三方库的Java源码是非常罕见的，所以，绝大多数情况下，我们无法直接运行一个Java源码文件，原因是它需要依赖其他的库，需要先将依赖的包编译成class，再去运行才行。
+     - 有一些童鞋可能知道，直接运行`java Hello.java`也是可以的：`java Hello.java`。这是Java 11（JDK11）新增的一个功能，它可以直接运行一个单文件源码！
+     - 需要注意的是，在实际项目中，单个不依赖第三方库的Java源码是非常罕见的，所以，绝大多数情况下，我们无法直接运行一个Java源码文件，原因是它需要依赖其他的库，需要先将依赖的包编译成class，再去运行才行。
 
-   - #### 主方法中的参数
+  - #### 主方法中的参数
 
-     > Java程序的入口是`main`方法（主方法），而`main`方法可以接受命令行参数。这些参数由用户输入，JVM接收并传给main方法的`String[]`型参数args中。（注意：接收的是`java 类名`后面的参数）
+    > Java程序的入口是`main`方法（主方法），而`main`方法可以接受命令行参数。这些参数由用户输入，JVM接收并传给main方法的`String[]`型参数args中。（注意：接收的是`java 类名`后面的参数）
 
-   - #### 输入和输出
+  - #### 输入和输出
 
-      - 输出：在前面的代码中，我们总是使用`System.out.println()`来向屏幕输出一些内容。`println`是print line的缩写，表示输出并换行。因此，如果输出后不想换行，可以用`System.out.print()`。
+     - 输出：在前面的代码中，我们总是使用`System.out.println()`来向屏幕输出一些内容。`println`是print line的缩写，表示输出并换行。因此，如果输出后不想换行，可以用`System.out.print()`。
 
-      - 格式化输出：Java还提供了格式化输出的功能。为什么要格式化输出？因为计算机表示的数据不一定适合人来阅读。
+     - 格式化输出：Java还提供了格式化输出的功能。为什么要格式化输出？因为计算机表示的数据不一定适合人来阅读。
 
-         > 如果要把数据显示成我们期望的格式，就需要使用格式化输出的功能。格式化输出使用`System.out.printf()`，通过使用占位符`%?`，`printf()`可以把后面的参数格式化成指定格式：
+        > 如果要把数据显示成我们期望的格式，就需要使用格式化输出的功能。格式化输出使用`System.out.printf()`，通过使用占位符`%?`，`printf()`可以把后面的参数格式化成指定格式：
 
-         ```java
-         // 格式化输出
-         public class Main {
-             public static void main(String[] args) {
-                 double d = 3.1415926;
-                 System.out.printf("输出：%.2f", d); // 输出：3.14
-                 System.out.printf("输出：%.4f", d); // 输出：3.1416
-             }
-         }
-         ```
+        ```java
+        // 格式化输出
+        public class Main {
+            public static void main(String[] args) {
+                double d = 3.1415926;
+                System.out.printf("输出：%.2f", d); // 输出：3.14
+                System.out.printf("输出：%.4f", d); // 输出：3.1416
+            }
+        }
+        ```
 
-         > Java的格式化功能提供了多种占位符，可以把各种数据类型“格式化”成指定的字符串：
-         >
-         > | 占位符 | 说明                             |
-         > | ------ | -------------------------------- |
-         > | %d     | 格式化输出整数                   |
-         > | %x     | 格式化输出十六进制整数           |
-         > | %f     | 格式化输出浮点数                 |
-         > | %e     | 格式化输出科学计数法表示的浮点数 |
-         > | %s     | 格式化字符串                     |
-         >
-         > 注意：由于`printf`中`%`表示占位符，因此如果要输出字符`%`，要用连续两个`%%`表示一个`%`字符本身。
-         >
-         > 占位符本身还可以有更详细的格式化参数。下面的例子把一个整数格式化成十六进制，并用0补足8位：
-         >
-         > ```java
-         > // 格式化输出
-         > public class Main {
-         >     public static void main(String[] args) {
-         >         int n = 12345000;
-         >         System.out.printf("n=%d, hex=%08x", n, n); // 注意，两个%占位符必须传入两个数
-         >     }
-         > }
-         > ```
-         >
-         > 详细的格式化参数请参考JDK文档[java.util.Formatter](https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/util/Formatter.html#syntax)
-
-      - 输入：Java提供`Scanner`对象来方便输入，读取对应的类型可以使用：`scanner.nextLine()` / `nextInt()` / `nextDouble()` / ...
-
-         > 和输出相比，Java的输入就要复杂得多。我们先看一个从控制台读取一个字符串和一个整数的例子：
-         >
-         > ```java
-         > import java.util.Scanner;
-         > 
-         > public class Main {
-         >     public static void main(String[] args) {
-         >         Scanner scanner = new Scanner(System.in); // 创建Scanner对象
-         >         System.out.print("Input your name: "); // 打印提示
-         >         String name = scanner.nextLine(); // 读取一行输入并获取字符串
-         >         System.out.print("Input your age: "); // 打印提示
-         >         int age = scanner.nextInt(); // 读取一行输入并获取整数
-         >         System.out.printf("Hi, %s, you are %d\n", name, age); // 格式化输出
-         >     }
-         > }
-         > ```
-         >
-         > 1. 首先创建`Scanner`对象并传入`System.in`。`System.out`代表标准输出流，而`System.in`代表标准输入流。直接使用`System.in`读取用户输入虽然是可以的，但需要更复杂的代码，而通过`Scanner`就可以简化后续的代码。
-         > 2. 有了`Scanner`对象后，要读取用户输入的字符串，使用`scanner.nextLine()`，要读取用户输入的整数，使用`scanner.nextInt()`。`Scanner`对象的这些方法可以自动转换数据类型，避免了手动转换。
-         >
-         > 要测试输入，必须从命令行读取用户输入：
-         >
-         > ```bash
-         > $ java Main
-         > Input your name: Bob ◀── 输入 Bob
-         > Input your age: 12   ◀── 输入 12
-         > Hi, Bob, you are 12  ◀── 输出
-         > ```
-         >
-         > 根据提示分别输入一个字符串和整数后，我们得到了格式化的输出。
-
-   - #### 关于Java程序的一些说明
-
-      - Java中严格区分大小写。每个**Java语句必须以`;`结束**。
-
-      - 程序中，程序员可以自由命名的被称为**标识符**。**Java中的标识符由字母、数字、下划线、美元符号组成，且不能以数字开头**。哪些地方可以用标识符：类名、变量名、包名、方法名、接口名、常量名。
-
-      - `class、public、static、..`等程序中预定义的、有特殊含义的标识符被称为**关键字**。Java中的关键字都是小写。（标识符命名不能和已定义的关键字冲突）
-
-        > Java规范了50个关键字（包含了goto、const两个保留字）。还有额外的三个字面量：`true、false、null`，虽然不是关键字，但是我们也把他们看做是关键字。
-
-      - Java中的注释分为：单行注释（`//注释`）、多行注释（`/*注释*/`）和文档注释（`/**注释*/`）。其中文档注释可以被`javadoc`命令解析生成说明文档。
-
-      - Java中switch语句的值只能是如下类型：整型、枚举型（JDK5）、String（jdk7）。
-
-        > 从JDK12开始，`switch`语句升级为更简洁的表达式语法，使用类似模式匹配（Pattern Matching）的方法，保证只有一种路径会被执行，并且不需要`break`语句，没有**Case穿透**问题：
-  >
+        > Java的格式化功能提供了多种占位符，可以把各种数据类型“格式化”成指定的字符串：
+        >
+        > | 占位符 | 说明                             |
+        > | ------ | -------------------------------- |
+        > | %d     | 格式化输出整数                   |
+        > | %x     | 格式化输出十六进制整数           |
+        > | %f     | 格式化输出浮点数                 |
+        > | %e     | 格式化输出科学计数法表示的浮点数 |
+        > | %s     | 格式化字符串                     |
+        >
+        > 注意：由于`printf`中`%`表示占位符，因此如果要输出字符`%`，要用连续两个`%%`表示一个`%`字符本身。
+        >
+        > 占位符本身还可以有更详细的格式化参数。下面的例子把一个整数格式化成十六进制，并用0补足8位：
+        >
         > ```java
+        > // 格式化输出
         > public class Main {
         >     public static void main(String[] args) {
-        >         String fruit = "apple";
-        >         switch (fruit) {  // 注意新语法使用->，如果有多条语句，需要用{}括起来。
-        >             case "apple" -> System.out.println("Selected apple");
-        >             case "pear" -> System.out.println("Selected pear");
-        >             case "mango" -> {
-        >                 System.out.println("Selected mango");
-        >                 System.out.println("Good choice!");
-        >             }
-        >             default -> System.out.println("No fruit selected");
-        >         }
+        >         int n = 12345000;
+        >         System.out.printf("n=%d, hex=%08x", n, n); // 注意，两个%占位符必须传入两个数
         >     }
         > }
         > ```
         >
-        > 并且**从Java 14开始，`switch`语句正式升级为表达式**，可以直接返回值。
+        > 详细的格式化参数请参考JDK文档[java.util.Formatter](https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/util/Formatter.html#syntax)
+
+     - 输入：Java提供`Scanner`对象来方便输入，读取对应的类型可以使用：`scanner.nextLine()` / `nextInt()` / `nextDouble()` / ...
+
+        > 和输出相比，Java的输入就要复杂得多。我们先看一个从控制台读取一个字符串和一个整数的例子：
         >
         > ```java
-        > // switch
+        > import java.util.Scanner;
+        > 
         > public class Main {
         >     public static void main(String[] args) {
-        >         String fruit = "apple";
-        >         int opt = switch (fruit) {
-        >             case "apple" -> 1;
-        >             case "pear", "mango" -> 2;
-        >             default -> 0;
-        >         }; // 注意赋值语句要以;结束
-        >         System.out.println("opt = " + opt);
+        >         Scanner scanner = new Scanner(System.in); // 创建Scanner对象
+        >         System.out.print("Input your name: "); // 打印提示
+        >         String name = scanner.nextLine(); // 读取一行输入并获取字符串
+        >         System.out.print("Input your age: "); // 打印提示
+        >         int age = scanner.nextInt(); // 读取一行输入并获取整数
+        >         System.out.printf("Hi, %s, you are %d\n", name, age); // 格式化输出
         >     }
         > }
         > ```
         >
-        > 如果分支里面有复杂的语句，需要使用`yield`关键字为switch语句指定分支的返回值。旧的switch语句要返回值也需要用`yield`关键字。
+        > 1. 首先创建`Scanner`对象并传入`System.in`。`System.out`代表标准输出流，而`System.in`代表标准输入流。直接使用`System.in`读取用户输入虽然是可以的，但需要更复杂的代码，而通过`Scanner`就可以简化后续的代码。
+        > 2. 有了`Scanner`对象后，要读取用户输入的字符串，使用`scanner.nextLine()`，要读取用户输入的整数，使用`scanner.nextInt()`。`Scanner`对象的这些方法可以自动转换数据类型，避免了手动转换。
         >
-        > ```java
-        > // yield
-        > public class Main {
-        >     public static void main(String[] args) {
-        >         String fruit = "orange";
-        >         int opt = switch (fruit) {
-        >             case "apple" -> 1;
-        >             case "pear", "mango" -> 2;
-        >             default -> {
-        >                 int code = fruit.hashCode();
-        >                 yield code; // switch语句返回值
-        >             }
-        >         };
-        >         System.out.println("opt = " + opt);
-        >     }
-        > }
+        > 要测试输入，必须从命令行读取用户输入：
+        >
+        > ```bash
+        > $ java Main
+        > Input your name: Bob ◀── 输入 Bob
+        > Input your age: 12   ◀── 输入 12
+        > Hi, Bob, you are 12  ◀── 输出
         > ```
-  
-      - Java中的`for each`循环可以遍历所有**可迭代**的数据类型（实现了 `Iterator` 接口），包括数组及后面的`List`、`Map`等。虽然`for each`的写法更简洁，但是`for each`循环无法指定遍历顺序，也无法获取数组的索引。
+        >
+        > 根据提示分别输入一个字符串和整数后，我们得到了格式化的输出。
+
+  - #### 关于Java程序的一些说明
+
+     - Java中严格区分大小写。每个**Java语句必须以`;`结束**。
+
+     - 程序中，程序员可以自由命名的被称为**标识符**。**Java中的标识符由字母、数字、下划线、美元符号组成，且不能以数字开头**。哪些地方可以用标识符：类名、变量名、包名、方法名、接口名、常量名。
+
+     - `class、public、static、..`等程序中预定义的、有特殊含义的标识符被称为**关键字**。Java中的关键字都是小写。（标识符命名不能和已定义的关键字冲突）
+
+       > Java规范了50个关键字（包含了goto、const两个保留字）。还有额外的三个字面量：`true、false、null`，虽然不是关键字，但是我们也把他们看做是关键字。
+
+     - Java中的注释分为：单行注释（`//注释`）、多行注释（`/*注释*/`）和文档注释（`/**注释*/`）。其中文档注释可以被`javadoc`命令解析生成说明文档。
+
+     - Java中switch语句的值只能是如下类型：整型、枚举型（JDK5）、String（jdk7）。
+
+       > 从JDK12开始，`switch`语句升级为更简洁的表达式语法，使用类似模式匹配（Pattern Matching）的方法，保证只有一种路径会被执行，并且不需要`break`语句，没有**Case穿透**问题：
+       >
+       > ```java
+       > public class Main {
+       >     public static void main(String[] args) {
+       >         String fruit = "apple";
+       >         switch (fruit) {  // 注意新语法使用->，如果有多条语句，需要用{}括起来。
+       >             case "apple" -> System.out.println("Selected apple");
+       >             case "pear" -> System.out.println("Selected pear");
+       >             case "mango" -> {
+       >                 System.out.println("Selected mango");
+       >                 System.out.println("Good choice!");
+       >             }
+       >             default -> System.out.println("No fruit selected");
+       >         }
+       >     }
+       > }
+       > ```
+       >
+       > 并且**从Java 14开始，`switch`语句正式升级为表达式**，可以直接返回值。
+       >
+       > ```java
+       > // switch
+       > public class Main {
+       >     public static void main(String[] args) {
+       >         String fruit = "apple";
+       >         int opt = switch (fruit) {
+       >             case "apple" -> 1;
+       >             case "pear", "mango" -> 2;
+       >             default -> 0;
+       >         }; // 注意赋值语句要以;结束
+       >         System.out.println("opt = " + opt);
+       >     }
+       > }
+       > ```
+       >
+       > 如果分支里面有复杂的语句，需要使用`yield`关键字为switch语句指定分支的返回值。旧的switch语句要返回值也需要用`yield`关键字。
+       >
+       > ```java
+       > // yield
+       > public class Main {
+       >     public static void main(String[] args) {
+       >         String fruit = "orange";
+       >         int opt = switch (fruit) {
+       >             case "apple" -> 1;
+       >             case "pear", "mango" -> 2;
+       >             default -> {
+       >                 int code = fruit.hashCode();
+       >                 yield code; // switch语句返回值
+       >             }
+       >         };
+       >         System.out.println("opt = " + opt);
+       >     }
+       > }
+       > ```
+     
+     - Java中的`for each`循环可以遍历所有**可迭代**的数据类型（实现了 `Iterator` 接口），包括数组及后面的`List`、`Map`等。虽然`for each`的写法更简洁，但是`for each`循环无法指定遍历顺序，也无法获取数组的索引。
 
    - #### 变量
 
@@ -339,7 +339,7 @@
 
         > - 在语句块中定义的变量，它有一个作用域，就是从定义处开始，到语句块结束。超出了作用域引用这些变量，编译器会报错。
      > - 定义变量时，要遵循作用域最小化原则，尽量将变量定义在尽可能小的作用域。局部变量必须先初始化再使用。
-  
+
    - #### 基本运算
 
       - ##### 整数运算：
@@ -368,14 +368,14 @@
         - 因为浮点数常常无法精确表示，因此，浮点数运算常常会产生误差。于浮点数存在运算误差，所以比较两个浮点数是否相等常常会出现错误的结果。正确的比较方法是判断两个浮点数之差的绝对值是否小于一个很小的数。
         - 由于float/double在计算机内存中是按照IEEE754标准来存的，故float4个字节也比long8个字节能表示的数字大。因此如果参与运算的两个数其中一个是整型，那么整型会自动提升到浮点型。这依然遵循“小类型”会被自动转为“大类型”。
         - 可以将浮点数强制转型为整数。在转型时，浮点数的小数部分会被丢掉。如果转型后超过了整型能表示的最大范围，将返回整型的最大值。如果要进行四舍五入，可以对浮点数加上`0.5`再强制转型。
-  
+
       - **布尔运算**：布尔运算是一种关系运算，包括以下几类。
 
         - 比较运算符：`>`，`>=`，`<`，`<=`，`==`，`!=`
      - 与运算 `&&`、`&`
         - 或运算 `||`、`&`
         - 非运算 `!`
-  
+
         > 注意：`&&`、`||`和`&`、`|`的区别是， 前者会短路，后者不会。一般`&&`更常用，因短路特性更安全高效。
 
       - **自动类型转换（类型提升）与强制类型转换**：
@@ -384,7 +384,7 @@
 
           > 1. 在整型做运算时，如果参与运算的两个整型类型不一致，那么首先会自动转成较大的那个，然后再计算。特殊的是：byte、short、char在做运算时，各自会先转成int，再做计算。
        > 2. “小类型”变量被赋值给“大类型”变量时，会存在**自动类型转换**：`byte` -> `short` -> `int` -> `long` -> `float` -> `double`。如果是引用类型，子类会自动转为父类。
-  
+
         - ###### 强制类型转换：
 
           > “大类型”被赋值给“小类型”时，则需要手动做强制类型转换。语法：`(类型)变量名`。如果对整数型做强转，则高位会被丢弃掉，仅保留低位的字节。
@@ -687,11 +687,40 @@
      >
      >   > 通过继承父类，子类`Student`中就有了父类中所有的属性和方法了，因此不要再重复name和age字段/方法了，只需要定义自己独有的属性和方法即可，不再需要写重复代码。
      >
-     > - 子类继承父类之后，会自动获得父类中的所有的（实例的）属性和方法，严禁定义与父类重名的字段！（构造方法不会被子类所继承）
+     > - 子类继承父类之后，会自动获得父类中的所有的属性和方法（包括静态的），严禁定义与父类重名的字段！（构造方法不会被子类所继承）
      >
      > - 在OOP的术语中，我们把`Person`称为超类（super class），父类（parent class），基类（base class），把`Student`称为子类（subclass），扩展类（extended class）。
      >
      > - Java中的类只允许单继承，一个类有且仅有一个父类。并且一个类如果没有显式的写`extends`，默认会继承`Object`类。而`Object`类比较特殊，它是继承链的顶端，没有父类。
+   
+   - #### 阻止继承：
+   
+     > 从Java 15开始，允许使用`sealed`修饰class，并通过`permits`明确写出能够从该class继承的子类名称。
+     >
+     > 例如，定义一个`Shape`类：
+     >
+     > ```java
+     > public sealed class Shape permits Rect, Circle, Triangle {
+     >     ...
+     > }
+     > ```
+     >
+     > 上述`Shape`类就是一个`sealed`类，它只允许指定的3个类继承它。如果写：
+     >
+     > ```java
+     > public final class Rect extends Shape {...}
+     > ```
+     >
+     > 是没问题的，因为`Rect`出现在`Shape`的`permits`列表中。但是，如果定义一个`Ellipse`就会报错：
+     >
+     > ```java
+     > public final class Ellipse extends Shape {...}
+     > // Compile error: class is not allowed to extend sealed class: Shape
+     > ```
+     >
+     > 原因是`Ellipse`并未出现在`Shape`的`permits`列表中。这种`sealed`类主要用于一些框架，防止继承被滥用。
+     >
+     > `sealed`类在Java 15中目前是预览状态，要启用它，必须使用参数`--enable-preview`和`--source 15`。
    
    - #### 区分继承和组合：
    
@@ -1030,14 +1059,14 @@
        >
        > ```java
        > interface Hello {
-       >     void hello();
+       >    	void hello();
        > }
        > interface Runable {
-       >     void run();
+       >    	void run();
        > }
        > 
        > interface Person extends Hello, Runable {
-       >     String getName();
+       >    	String getName();
        > }
        > ```
        >
@@ -1301,7 +1330,7 @@
        >
        
      - ##### 静态内部类：（类似于静态成员）
-     
+   
        > 静态内部类（Static Nested Class）使用`static`修饰，类似于静态成员：
        >
        > ```java
@@ -1334,7 +1363,7 @@
        >
        
      - ##### 局部内部类/匿名内部类：
-     
+   
        > 还有一种局部内部类（匿名内部类），它不需要在Outer Class中明确地定义这个Class，而是在方法内部，通过匿名类（Anonymous Class）来定义。示例代码如下：
        >
        > ```java
@@ -1401,11 +1430,11 @@
        > `map1`是一个普通的`HashMap`实例，但`map2`是一个匿名类实例，只是该匿名类继承自`HashMap`。`map3`也是一个继承自`HashMap`的匿名类实例，并且添加了静态代码块来初始化数据。观察编译输出可发现`Main$1.class`和`Main$2.class`两个匿名类文件。
        >
        > 匿名内部类和实例内部类本质上是相同的，都必须依附于Outer Class的实例，即隐含地持有`Outer.this`实例，并拥有Outer Class的`private`访问权限。
-     
+   
    - #### classpath和jar
    
      - ##### classpath：
-     
+   
        > 在Java中，我们经常听到`classpath`这个东西。网上有很多关于“如何设置classpath”的文章，但大部分设置都不靠谱。
        >
        > 到底什么是`classpath`？
@@ -1433,7 +1462,7 @@
        > - C:\shared\abc\xyz\Hello.class
        >
        > 注意到`.`代表当前目录。如果JVM在某个路径下找到了对应的`class`文件，就不再往后继续搜索。如果所有路径下都没有找到，就报错。
-     
+   
        > `classpath`的设定方法有两种：
        >
        > 1. 在系统环境变量中设置`classpath`环境变量，不推荐；
@@ -1460,7 +1489,7 @@
        > 上述命令告诉JVM只在当前目录搜索`Hello.class`。
        >
        > 在IDE中运行Java程序，IDE自动传入的`-cp`参数是当前工程输出类文件的目录和引入的jar包目录。
-     
+   
        > 通常，我们在自己编写的`class`中，会引用Java核心库的`class`，例如，`String`、`ArrayList`等。这些`class`应该上哪去找？
        >
        > 有很多“如何设置classpath”的文章会告诉你把JVM自带的`rt.jar`放入`classpath`，但事实上，根本不需要告诉JVM如何去Java核心库查找`class`，JVM怎么可能笨到连自己的核心库在哪都不知道！
@@ -1485,9 +1514,9 @@
        > ```
        >
        > JVM根据classpath设置的`.`在当前目录下查找`com.example.Hello`，即实际搜索文件必须位于`com/example/Hello.class`。如果指定的`.class`文件不存在，或者目录结构和包名对不上，均会报错。
-     
+   
      - ##### jar包：
-     
+   
        > 如果有很多`.class`文件，散落在各层目录中，肯定不便于管理。如果能把目录打一个包，变成一个文件，就方便多了。jar包就是用来干这个事的，它可以把`package`组织的目录层级，以及各个目录下的所有文件（包括`.class`文件和其他文件）都打成一个jar文件，这样一来，无论是备份，还是发给客户，就简单多了。
        >
        > **jar包实际上就是一个zip格式的压缩文件，而jar包相当于目录**。如果我们要执行一个jar包的`class`，就可以把jar包放到`classpath`中：
@@ -1525,7 +1554,7 @@
        > ![hello.zip.invalid](https://liaoxuefeng.com/books/java/oop/basic/classpath-jar/bad-jar.jpg)
        >
        > 上面的`hello.zip`包含有`bin`目录，说明打包打得有问题，JVM仍然无法从jar包中查找正确的`class`，原因是`hong.Person`必须按`hong/Person.class`存放，而不是`bin/hong/Person.class`。
-     
+   
        > jar包还可以包含一个特殊的`/META-INF/MANIFEST.MF`文件，`MANIFEST.MF`是纯文本，可以指定`Main-Class`和其它信息。JVM会自动读取这个`MANIFEST.MF`文件，如果存在`Main-Class`（则是一个可执行的jar包），我们就不必在命令行指定启动的类名，而是用更方便的命令：
        >
        > ```bash
@@ -1533,7 +1562,7 @@
        > ```
        >
        > 在大型项目中，不可能手动编写`MANIFEST.MF`文件，再手动创建jar包。Java社区提供了大量的开源构建工具，例如[Maven](https://liaoxuefeng.com/books/java/maven/index.html)，可以非常方便地创建jar包。
-     
+   
    - #### class版本：
    
      > 在Java开发中，许多童鞋经常被各种版本的JDK搞得晕头转向，本节我们就来详细讲解Java程序编译后的class文件版本问题。
@@ -1598,13 +1627,13 @@
      > 如果使用`javac`编译时不指定任何版本参数，那么相当于使用`--release 当前版本`编译，即源码版本和输出版本均为当前版本。
      >
      > 在开发阶段，多个版本的JDK可以同时安装，当前使用的JDK版本可由`JAVA_HOME`环境变量切换。
-     
+   
      - ##### 源码版本：
-     
+   
        > 在编写源代码的时候，我们通常会预设一个源码的版本。在编译的时候，如果用`--source`或`--release`指定源码版本，则使用指定的源码版本检查语法。
        >
        > 例如，使用了lambda表达式的源码版本至少要为8才能编译，使用了`var`关键字的源码版本至少要为10才能编译，使用`switch`表达式的源码版本至少要为12才能编译，且12和13版本需要启用`--enable-preview`参数。
-     
+   
    - #### 模块：
    
      > 从Java 9开始，JDK又引入了模块（Module）。
@@ -1638,9 +1667,9 @@
      > 这些`.jmod`文件每一个都是一个模块，模块名就是文件名。例如：模块`java.base`对应的文件就是`java.base.jmod`。**模块之间的依赖关系已经被写入到模块内的`module-info.class`文件了**。**所有的模块都直接或间接地依赖`java.base`模块，只有`java.base`模块不依赖任何模块，它可以被看作是“根模块”**，好比所有的类都是从`Object`直接或间接继承而来。
      > 
      > **把一堆class封装为jar仅仅是一个打包的过程，而把一堆class封装为模块则不但需要打包，还需要写入依赖关系，并且还可以包含二进制代码（通常是JNI扩展）**。此外，模块支持多版本，即在同一个模块中可以为不同的JVM提供不同的版本。
-     
+   
      - ##### 编写模块：
-     
+   
        > 那么，我们应该如何编写模块呢？还是以具体的例子来说。首先，创建模块和原有的创建Java项目是完全一样的，以`oop-module`工程为例，它的目录结构如下：
        >
        > ```
@@ -1684,7 +1713,7 @@
        > ```
        >
        > 如果把`requires java.xml;`从`module-info.java`中去掉，编译将报错。可见，模块的重要作用就是声明依赖关系。
-     
+   
        > 下面，我们用JDK提供的命令行工具来编译并创建模块：
        >
        > 1. 首先，我们把工作目录切换到`oop-module`，在当前目录下编译所有的`.java`文件，并存放到`bin`目录下，命令如下：
@@ -1728,9 +1757,9 @@
        >    ```
        >
        >    于是，在当前目录下我们又得到了`hello.jmod`这个模块文件，这就是最后打包出来的传说中的模块！
-     
+   
      - ##### 运行模块：
-     
+   
        > 要运行一个jar，我们使用`java -jar xxx.jar`命令。要运行一个模块，我们只需要指定模块名。试试：
        >
        > ```bash
@@ -1754,9 +1783,9 @@
        > 那我们辛辛苦苦创建的`hello.jmod`有什么用？
        >
        > 答案是我们可以用它来**打包JRE**。
-     
+   
      - ##### 打包JRE：
-     
+   
        > 前面讲了，为了支持模块化，Java 9首先带头把自己的一个巨大无比的`rt.jar`拆成了几十个`.jmod`模块，原因就是，运行Java程序的时候，实际上我们用到的JDK模块，并没有那么多。不需要的模块，完全可以删除。
        >
        > 过去发布一个Java应用程序，要运行它，必须下载一个完整的JRE，再运行jar包。而完整的JRE块头很大，有100多M。怎么给JRE瘦身呢？
@@ -1777,9 +1806,9 @@
        > ```
        >
        > 要分发我们自己的Java应用程序，只需要把这个`jre`目录打个包给对方发过去，对方直接运行上述命令即可，既不用下载安装JDK，也不用知道如何配置我们自己的模块，极大地方便了分发和部署。
-     
+   
      - ##### 访问权限：
-     
+   
        > 前面我们讲过，Java的class访问权限分为**public、protected、private和默认**的包访问权限。引入模块后，这些访问权限的规则就要稍微做些调整。
        >
        > 确切地说，**class的这些访问权限只在一个模块内有效**，模块和模块之间，例如，**a模块要访问b模块的某个class，必要条件是b模块明确地导出了可以访问的包**。
